docs/api/qiskit-ibm-runtime/0.48/quantum-program.mdx
---
title: quantum_program (v0.48)
description: API reference for qiskit_ibm_runtime.quantum_program in qiskit-ibm-runtime v0.48
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_ibm_runtime.quantum_program
---

<span id="quantum-programs-qiskit-ibm-runtime-quantum-program" />

<span id="module-qiskit_ibm_runtime.quantum_program" />

# Quantum Programs

`qiskit_ibm_runtime.quantum_program`

## Overview

A quantum program consists of a list of ordered elements, each of which contains a single circuit and an array of associated parameter values. Executing a quantum program will sample the outcome of each circuit for the specified number of `shots` for each set of circuit arguments provided.

## Classes

|                                                                                                                                                        |                                                                                                                                                                                                               |
| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`QuantumProgram`](/docs/api/qiskit-ibm-runtime/0.48/quantum-program-quantum-program "qiskit_ibm_runtime.quantum_program.QuantumProgram")              | A quantum runtime executable.                                                                                                                                                                                 |
| [`QuantumProgramItem`](/docs/api/qiskit-ibm-runtime/0.48/quantum-program-quantum-program-item "qiskit_ibm_runtime.quantum_program.QuantumProgramItem") | An item of a [`QuantumProgram`](/docs/api/qiskit-ibm-runtime/0.48/quantum-program-quantum-program "qiskit_ibm_runtime.quantum_program.QuantumProgram").                                                       |
| [`CircuitItem`](/docs/api/qiskit-ibm-runtime/0.48/quantum-program-circuit-item "qiskit_ibm_runtime.quantum_program.CircuitItem")                       | An item of a [`QuantumProgram`](/docs/api/qiskit-ibm-runtime/0.48/quantum-program-quantum-program "qiskit_ibm_runtime.quantum_program.QuantumProgram") containing a circuit and its arguments.                |
| [`SamplexItem`](/docs/api/qiskit-ibm-runtime/0.48/quantum-program-samplex-item "qiskit_ibm_runtime.quantum_program.SamplexItem")                       | An item of a [`QuantumProgram`](/docs/api/qiskit-ibm-runtime/0.48/quantum-program-quantum-program "qiskit_ibm_runtime.quantum_program.QuantumProgram") containing a circuit and samplex to feed it arguments. |

